--- a/src/components/shared/footer-component/footer.component.scss
+++ b/src/components/shared/footer-component/footer.component.scss
@@ -1,8 +1,8 @@
 @keyframes splashInBottom {
   0% {
       opacity: 0;
-      -webkit-transform: translateY(1rem);
-      transform: translateY(1rem)
+      -webkit-transform: translateY(0rem);
+      transform: translateY(0rem)
   }
   100% {
       opacity: 1;
@@ -12,14 +12,21 @@
 }
 
 .footer-text {
-  display: flex;
-  justify-content: center;
+  //display: flex;
+  //justify-content: center;
   //bottom: 0;
   //margin-top:14px;
   //margin-bottom:0;
   font-size:13px;
   //opacity:0.6;
   //text-shadow: 0.1px 0.1px .2px #000;
+  width: 100%;
+  height: 40px;
+  padding-top: 2rem;
+  display: block;
+  bottom: 0;
+  left: 0;
+  text-align: center;
 }
 .link {
   opacity: 1;
